css/styles.css
/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}
body {
  /* Margin bottom by footer height */
  margin-bottom: 60px;
}

hr {
  margin-right: 50px;
  margin-left: 50px;
}

.big-icon {
  color: #bbbbbb;
  font-size: 60px !important;
}

.footer {
  width: 100%;
  margin-top: 30px;
  /* Set the fixed height of the footer here */
  height: 60px;
  background-color: #f0f0f0;
}

.footer-left {
  margin-left: 50px;
}

.footer-right {
  margin-right: 50px;
}

.footer-icon {
  font-size: 24px !important;
}

